disable metricbeat kubernetes module, since it produces errors only

--- a/values.yaml.tmpl
+++ b/values.yaml.tmpl
@@ -51,7 +51,7 @@ daemonset:
             by_cpu: 5      # include top 5 processes by CPU
             by_memory: 5   # include top 5 processes by memory
     kubernetes:
-      enabled: true
+      enabled: false
       config:
         - module: kubernetes
           metricsets:
